k8s/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-backend
  namespace: urlstn
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-backend
  template:
    metadata:
      labels:
        app: app-backend
    spec:
      containers:
        - name: app-backend
          image: ghcr.io/ase-cx/url-shortener-backend:1.0.1
          ports:
            - containerPort: 3000
