k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-backend-service
  namespace: urlstn
spec:
  selector:
    app: app-backend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: urlstn
  labels:
    app: mongodb
spec:
  ports:
  - port: 27017
    targetPort: 27017
  clusterIP: None
  selector:
    app: mongodb
