k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: url-shortener-ingress
  namespace: url-shortener
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: link.ase.cx
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-backend-service
                port:
                  number: 3000
